--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ a, a:hover{
 	border: 1px solid #fff;
 	border-radius: 12px;
 	font-size: 16px;
+	font-weight: 500;
+	letter-spacing: 1px;
 	margin-left: 10px;
 	transition: 1s ease-in-out;
 }
