--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,7 @@ a, a:hover{
 .protecting .card .card-body{ 
 	width: 100%;
 	padding: 25px;
+	padding-right: 15px;
 }
 .protecting .card .card-body h5{
 	font-size: 19px;
