--- a/css/style.css
+++ b/css/style.css
@@ -61,15 +61,17 @@ a, a:hover{
 .header-section .banner{
 	width: 100%;
 	padding: 70px 0px 285px;
+	position: relative;
 }
 .header-section .banner .col-md-12{
 	margin-top: -45px;
     padding: 0px 140px;
 }
-/*.header-section .banner .banner-inner{
-	width: 100%;
-	padding: 0px 0px 150px;
-}*/
+.header-section .banner .banner-inner{
+	/*width: 100%;*/
+	/*padding: 0px 0px 150px;*/
+	position: absolute;
+}
 .header-section .banner .banner-inner h1 {
     font-size: 38px;
     line-height: 48px;
@@ -106,7 +108,7 @@ a, a:hover{
 /*Envision section starts here*/
 .envision{
 	width: 100%;
-    padding: 40px 0px 90px;
+    padding: 325px 0px 90px;
     text-align: center;
     position: relative;
 }
@@ -115,17 +117,20 @@ a, a:hover{
 	font-weight: 800;
 	/*line-height: 38px;*/
 	color: #263238;
-	padding-bottom: 200px;
+	padding-bottom: 210px;
 }
 .envision .card{
-	width: 110%;
-	border-radius: 10px;
+	width: 108%;
+	border-radius: 12px;
 	margin-bottom: 45px;
+	border: 0px;
+	color: #ffffff;
+	box-shadow: 0px 5px 10px 10px rgb(236, 242, 248, .8);
 }
 .envision .card-body {
-    padding: 50px 36px 50px 40px;
+    padding: 40px 15px 40px 35px;
     text-align: left;
-    box-shadow: 0px 10px 15px 8px #eaf1f7;
+    border: 0px;
 }
 .envision .card-body h5{
 	font-size: 16px;
@@ -135,7 +140,7 @@ a, a:hover{
     margin-bottom: 30px;
 }
 .envision .card-body p{
-	font-size: 13px;
+	font-size: 12px;
     font-weight: 400;
     color: #5f7782;
 }
@@ -189,7 +194,7 @@ a, a:hover{
 /*Protecting section starts here*/
 .protecting{
 	width: 100%;
-	padding: 20px 195px 115px;
+	padding: 20px 0px 115px;
 	text-align: center;
 }
 .protecting h2{
@@ -203,7 +208,7 @@ a, a:hover{
 	border-radius: 1.25rem;
 	text-align: left;
 	border: none;
-    box-shadow: 0px 5px 10px 10px #f7f9fb;
+    box-shadow: 0px 0px 20px rgba(40,112,219, .1);
 }
 .protecting .card .card-body{ 
 	width: 100%;
